# kermorpp

./: .cproject  .gitignore  .project  CMakeLists.txt  Gaussian.cpp  Gaussian.h  Gaussian_test.cpp  KernelExpansion.cpp  KernelExpansion.h  KernelExpansion_test.cpp  RBFKernel.cpp  RBFKernel.h  RBFKernel_test.cpp  Wendland.cpp  Wendland.h  Wendland_test.cpp  kermorpp.h  mexTest.cpp  mstream.cpp  mstream.h  test_eval  test_load
include/: kermorpp.h  mstream.h
src/: Gaussian.cpp  KernelExpansion.cpp  RBFKernel.cpp  Util.cpp  Wendland.cpp
src/mex/: mexTest.cpp  mstream.cpp
test/: create_testdata.m  test.cpp  test_eval.cpp  test_load.cpp
